--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest test --silent",
     "check": "npm run-script lint && npm run-script test",
     "lint": "eslint **/*.js",
-    "lint:fix": "eslint --fix **/*.js"
+    "lint:fix": "eslint --fix **/*.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "author": "Ricardo Mozart Lino",
   "license": "MIT",
@@ -17,6 +18,7 @@
     "n-readlines": "^1.0.1"
   },
   "devDependencies": {
+    "coveralls": "^3.1.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -25,6 +27,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^29.3.1",
     "jest-junit": "^15.0.0",
+    "nyc": "^15.1.0",
     "prettier": "^2.4.1"
   }
 }
